--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Sandeep Desai"
-author: "Blog Author"
+author: "Sandeep Desai"
 description: "My blog"
 permalink: /:title/
 lang: "en"
@@ -22,9 +22,9 @@ navigation:                     # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md", sidebaricon: address-card}
 
 external:                       # accepts {file, title, url, icon, sidebaricon}
-  - {title: Mail, icon: envelope, url: "mailto:author@example.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "sandeeptdesai05@gmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/Sandeep-Desai/"}
+ 
 
 comments:
 #  disqus_shortname: ""         # see https://disqus.com
